Beautify modal and add message body + copy-to-self option Reduce length of date field for external link Change button text 'Save' to 'Share' Change mail error text Add send confirmation after sending notification defer link creation upon failing email notification Modify UI tests for Public Link dialog Share button Show button text "share" if creating a new share Add message field to share modal Send custom link share mail notification when specified Add email to OC.getCurrentUser() Add bccToSelf checkbox for linkshare Add bcc to self for public link share Add method description Spaces to tabs Rework confusing shorthand code Correctly check bcc post Move email attribute to oc_user attribute Disable autocomplete on email input Bring back OC.currentUser for legacy code... Fix faulty autocomplete Make dialog css more readable Propperly test $options in MailNotification Fix currentUser related tests Fix the fix Add new tests for bcc functionality, remove legacy autocomplete test

--- a/core/css/jquery.ocdialog.css
+++ b/core/css/jquery.ocdialog.css
@@ -91,29 +91,11 @@
 	height          : 100%;
 }
 
-.error-message-global {
+.error-message-global,
+.success-message-global {
 	background-color          : rgb(242, 222, 222);
-	border-bottom-color       : rgb(235, 204, 209);
-	border-bottom-left-radius : 4px;
-	border-bottom-right-radius: 4px;
-	border-bottom-style       : solid;
-	border-bottom-width       : 1px;
-	border-image-outset       : 0 0 0 0;
-	border-image-repeat       : stretch stretch;
-	border-image-slice        : 100% 100% 100% 100%;
-	border-image-source       : none;
-	border-image-width        : 1 1 1 1;
-	border-left-color         : rgb(235, 204, 209);
-	border-left-style         : solid;
-	border-left-width         : 1px;
-	border-right-color        : rgb(235, 204, 209);
-	border-right-style        : solid;
-	border-right-width        : 1px;
-	border-top-color          : rgb(235, 204, 209);
-	border-top-left-radius    : 4px;
-	border-top-right-radius   : 4px;
-	border-top-style          : solid;
-	border-top-width          : 1px;
+	border                    : 1px solid rgb(235, 204, 209);
+	border-radius             : 4px;
 	box-sizing                : border-box;
 	color                     : rgb(169, 68, 66);
 	font-family               : Verdana,sans-serif;
@@ -130,5 +112,10 @@
 	-moz-border-left-colors   : none;
 	-moz-border-right-colors  : none;
 	-moz-border-top-colors    : none;
+}
 
+.success-message-global {
+	background-color: rgb(222, 242, 226);
+	border-color    : rgb(177, 218, 186);
+	color           : rgb(66, 169, 76);
 }
